prevent horizontal scroll when pin border goes outside page

--- a/src/components/Pin/Pin.scss
+++ b/src/components/Pin/Pin.scss
@@ -6,6 +6,7 @@
     pointer-events: auto;
     cursor: grab;
     box-shadow: 0 0 4px rgba(0, 0, 0, 0.8);
+    touch-action: none;
 }
 
 .pin.pin-active {
